external-crates/move/crates/move-compiler/tests/move_2024/matching/let_else_mut_ref.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04004]: expected a single non-reference type
   ┌─ tests/move_2024/matching/let_else_mut_ref.move:10:13
   │
 9 │     fun by_mut_ref(subject: &mut ABC<u64>): &mut u64 {
   │                                             -------- Expected a single non-reference type, but found: '&mut u64'
10 │         let ABC::C(x) = subject else { abort 0 };
   │             ^^^^^^^^^ Invalid type argument

error[E04007]: incompatible types
   ┌─ tests/move_2024/matching/let_else_mut_ref.move:10:13
   │
 9 │     fun by_mut_ref(subject: &mut ABC<u64>): &mut u64 {
   │                             ------------- Expected: '&mut 0x42::m::ABC<u64>'
10 │         let ABC::C(x) = subject else { abort 0 };
   │             ^^^^^^^^^
   │             │
   │             Invalid pattern
   │             Given: '0x42::m::ABC<_>'
